welcome.lessons.welcome.bat.bool2.GreenTicket.scala.error
greenTicket:8: error: Boolean does not take parameters
  else ( a==b || b==c || c==a){
                              ^